--- a/ftp/pure-ftpd/HISTORY
+++ b/ftp/pure-ftpd/HISTORY
@@ -1,3 +1,7 @@
+2008-03-08 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* BUILD, CONFIGURE: added lots of user configurable options,
+	  use default_build
+
 2008-03-05 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* init.d/pure-ftpd, init.d/smgl-pure-ftpd: renamed the init
 	  script
