--- a/x11-libs/wine/HISTORY
+++ b/x11-libs/wine/HISTORY
@@ -1,3 +1,7 @@
+2008-03-08 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.9.57
+	* PRE_BUILD, ncurses.utf8.patch: deleted, no longer needed
+
 2008-03-06 Pol Vinogradov <vin.public@gmail.com>
 	* PRE_BUILD: patch only non-VCS branch
 
