--- a/kernels/linux/HISTORY
+++ b/kernels/linux/HISTORY
@@ -1,3 +1,7 @@
+2008-03-08 Eric Sandall <sandalle@sourcemage.org>
+	* latest.defaults: Latest PRE_2_6 is 2.6.25-rc4
+	* info/patches/PRE_2_6/patch-2.6.25-rc4: Added
+
 2008-03-07 Eric Sandall <sandalle@sourcemage.org>
 	* latest.defaults: Latest mm_patch is 2.6.25-rc3-mm1
 	* info/patches/mm_patches/2.6.25-rc3-mm1: Added
