--- a/net/samba/HISTORY
+++ b/net/samba/HISTORY
@@ -1,3 +1,7 @@
+2008-03-08 Eric Sandall <sandalle@sourcemage.org>
+	* DETAILS: Updated to 3.0.28a
+	* samba.gpg: Removed, they only sign the uncompressed .tar :(
+
 2007-12-10 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 3.0.28, SECURITY_PATCH=7, CVE-2007-6015
 
