--- a/utils/sudo/HISTORY
+++ b/utils/sudo/HISTORY
@@ -1,3 +1,6 @@
+2008-03-09 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.6.9p14
+
 2008-02-20 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.6.9p13
 
