--- a/security/snort/HISTORY
+++ b/security/snort/HISTORY
@@ -1,3 +1,6 @@
+2008-03-09 George Sherwood <george@beernabeer.com>
+	* DETAILS: Updated to version 2.8.0.2
+
 2007-12-02 George Sherwood <george@beernabeer.com>
 	* DETAILS: Updated to version 2.8.0.1
 
