--- a/science/avogadro/HISTORY
+++ b/science/avogadro/HISTORY
@@ -1,3 +1,6 @@
+2008-03-09 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.6.1
+
 2008-03-01 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.6.0
 	  spell created
