--- a/gnome2-apps/gnucash/HISTORY
+++ b/gnome2-apps/gnucash/HISTORY
@@ -1,3 +1,6 @@
+2008-03-09 George Sherwood <george@beernabeer.com>
+	* DETAILS: Updated to version 2.2.4
+
 2008-01-20 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
 	* CONFLICTS: removed gnofin, it's gone
 
