--- a/database/postgresql/HISTORY
+++ b/database/postgresql/HISTORY
@@ -1,3 +1,7 @@
+2008-03-09 Treeve Jelbert <treeve@sourcemage.org>
+	* init.d/postgresql: cleanup.
+	  fix for su from latest coreutils
+
 2008-02-06 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: Updated to 8.3.0
 
