--- a/python-pypi/turbogears/HISTORY
+++ b/python-pypi/turbogears/HISTORY
@@ -1,3 +1,7 @@
+2008-03-09 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.0.4.4
+	  new url
+
 2008-02-06 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.0.4.3
 
