--- a/python-pypi/luca/HISTORY
+++ b/python-pypi/luca/HISTORY
@@ -1,3 +1,8 @@
+2008-03-09 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.1
+	* DEPENDS: + soappy
+	* PRE_BUILD, luca.diff: deleted, now applied upstream
+
 2008-01-28 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
 	* PRE_BUILD: removed is_depends_enabled.function reference
 
