--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-03-09 Eric Sandall <sandalle@sourcemage.org>
+	* cluster/distriblend: Added a Distributing system for rendering 3D
+	  scenes
+
 2008-03-08 Ladislav Hagara <hgr@vabo.cz>
 	* net/paris-traceroute: new spell, a new version of the traceroute
 
