--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@
 	  scenes
 	* perl-cpan/yaml-tiny: Added a YAML script to read/write YAML files
 	  with as little code as possible
+	* cluster/farmerjoe: Added a distributed rendering system for Blender
 
 2008-03-08 Ladislav Hagara <hgr@vabo.cz>
 	* net/paris-traceroute: new spell, a new version of the traceroute
