--- a/gnome2-libs/libgnomeui/HISTORY
+++ b/gnome2-libs/libgnomeui/HISTORY
@@ -1,3 +1,6 @@
+2008-03-09 Robin Cook <rcook@wyrms.net>
+	* DETAILS: updated VERSION to 2.21.93
+
 2008-02-26 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated VERSION to 2.21.92
 
