--- a/devel/git/HISTORY
+++ b/devel/git/HISTORY
@@ -1,3 +1,6 @@
+2008-03-10 George Sherwood <george@beernabeer.com>
+	* DETAILS: Updated to version 1.5.4.4
+
 2008-02-24 George Sherwood <george@beernabeer.com>
 	* DETAILS: Updated to version 1.5.4.3
 
