--- a/http/squid/HISTORY
+++ b/http/squid/HISTORY
@@ -1,3 +1,6 @@
+2008-03-10 George Sherwood <george@beernabeer.com>
+	* DETAILS: Updated to version 3.0.STABLE2
+
 2007-12-24 George Sherwood <george@beernabeer.com>
 	* DETAILS: Updated to version 3.0.STABLE1
 
