--- a/fonts/dejavu-ttf/HISTORY
+++ b/fonts/dejavu-ttf/HISTORY
@@ -1,3 +1,7 @@
+2008-03-10 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 2.24
+	  fixed WEB_SITE
+
 2008-01-22 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 2.23
 	  fixed long description wrap
