--- a/audio-players/mpg123/HISTORY
+++ b/audio-players/mpg123/HISTORY
@@ -1,3 +1,6 @@
+2008-03-10 Thomas Orgis <sobukus@sourcemage.org>
+	* DETAILS: Update to 1.3.1 .
+
 2008-03-04 Juuso Alasuutari <iuso@sourcemage.org>
 	* DEPENDS: Changed depends jack to JACK-DRIVER.
 
