--- a/doc/man-pages/HISTORY
+++ b/doc/man-pages/HISTORY
@@ -1,3 +1,6 @@
+2008-03-10 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 2.79
+
 2008-02-19 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 2.78
 
