--- a/crypto/seahorse/HISTORY
+++ b/crypto/seahorse/HISTORY
@@ -1,3 +1,6 @@
+2008-03-10 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 2.22.0 (both stable and devel)
+
 2008-02-29 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 2.21.92 (devel)
 
