--- a/gnome2-libs/rarian/HISTORY
+++ b/gnome2-libs/rarian/HISTORY
@@ -1,3 +1,6 @@
+2008-03-10 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 0.8.0
+
 2008-01-09 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 0.7.1, cleaned up
 
