--- a/disk/ntfs-3g/HISTORY
+++ b/disk/ntfs-3g/HISTORY
@@ -1,3 +1,5 @@
+2008-03-10 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.2310
 2008-02-17 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.2216
 
