--- a/gnome2-libs/glib2/HISTORY
+++ b/gnome2-libs/glib2/HISTORY
@@ -1,3 +1,6 @@
+2008-03-10 Robin Cook <rcook@wyrms.net>
+	* DETAILS: updated VERSION to 2.16.0
+
 2008-02-26 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: downgraded to 2.14.6. 2.15 is the unstable
 	  development branch which right now is incompatible with
