--- a/utils/sunbird/HISTORY
+++ b/utils/sunbird/HISTORY
@@ -1,3 +1,6 @@
+2008-03-11  Ismael Luceno <ismael@sourcemage.org>
+	* BUILD: use persistent_add instead of export
+
 2007-08-08 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: corrected SOURCE_URL[0]
 
