--- a/video-libs/libdvb/HISTORY
+++ b/video-libs/libdvb/HISTORY
@@ -1,3 +1,6 @@
+2008-03-11  Ismael Luceno <ismael@sourcemage.org>
+	* BUILD: use persistent_add instead of export
+
 2007-03-13 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: updated to 0.5.5.1
 	* config.patch, makefile.patch: removed
