--- a/video-libs/gstreamer/HISTORY
+++ b/video-libs/gstreamer/HISTORY
@@ -1,3 +1,6 @@
+2008-03-11  Ismael Luceno <ismael@sourcemage.org>
+	* BUILD: use persistent_add instead of export
+
 2008-02-26 Arwed v. Merkatz <v.merkatz@gmx.net>
 	* DETAILS: updated to 0.10.17
 
