--- a/libs/xalan-c/HISTORY
+++ b/libs/xalan-c/HISTORY
@@ -1,3 +1,6 @@
+2008-03-11  Ismael Luceno <ismael@sourcemage.org>
+	* BUILD: use persistent_add instead of export
+
 2007-05-30 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS, BUILD, INSTALL: created this spell, version 1_10_0
 
