--- a/libs/pyqt4/HISTORY
+++ b/libs/pyqt4/HISTORY
@@ -1,3 +1,6 @@
+2008-03-11  Ismael Luceno <ismael@sourcemage.org>
+	* BUILD: use persistent_add instead of export
+
 2007-09-28 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS; version 4.3.1
 
