--- a/libs/pyqt/HISTORY
+++ b/libs/pyqt/HISTORY
@@ -1,3 +1,6 @@
+2008-03-11  Ismael Luceno <ismael@sourcemage.org>
+	* BUILD: use persistent_add instead of export
+
 2007-12-30 Remko van der Vossen <wich@sourcemage.org>
 	* DETAILS: version 3.17.4
 
