--- a/java/ant/HISTORY
+++ b/java/ant/HISTORY
@@ -1,3 +1,6 @@
+2008-03-11  Ismael Luceno <ismael@sourcemage.org>
+	* BUILD: use persistent_add instead of export
+
 2007-09-28 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Incremented PATCHLEVEL=1 to install update ant.sh
 	* ant.sh: Ant requires Java to run, so make sure JAVA_HOME is set if not
