--- a/http/icecat/HISTORY
+++ b/http/icecat/HISTORY
@@ -1,3 +1,6 @@
+2008-03-11  Ismael Luceno <ismael@sourcemage.org>
+	* BUILD: use persistent_add instead of export
+
 2008-02-06 Pol Vinogradov <vin.public@gmail.com>
 	* CONFIGURE: removed iceweasel's defaults
 	* CONFLICTS: removed
