--- a/editors/pdfedit/HISTORY
+++ b/editors/pdfedit/HISTORY
@@ -1,3 +1,6 @@
+2008-03-11  Ismael Luceno <ismael@sourcemage.org>
+	* BUILD: use persistent_add instead of export
+
 2007-08-30 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 0.3.2
 	* PRE_BUILD: removed
