--- a/devel/patch/HISTORY
+++ b/devel/patch/HISTORY
@@ -1,3 +1,6 @@
+2008-03-11  Ismael Luceno <ismael@sourcemage.org>
+	* BUILD: use persistent_add instead of export
+
 2006-10-03 Juuso Alasuutari <iuso@sourcemage.org>
 	* DETAILS: [automated] Removed UPDATED.
 
