--- a/devel/lazarus/HISTORY
+++ b/devel/lazarus/HISTORY
@@ -1,3 +1,6 @@
+2008-03-11  Ismael Luceno <ismael@sourcemage.org>
+	* BUILD: use persistent_add instead of export
+
 2007-12-24 Treeve Jelbert <treeve@sourcemage.org>
 	* BUILD, INSTALL: set FPC, for use on x86_64
 
