--- a/crypto/nss/HISTORY
+++ b/crypto/nss/HISTORY
@@ -1,3 +1,6 @@
+2008-03-11  Ismael Luceno <ismael@sourcemage.org>
+	* BUILD: use persistent_add instead of export
+
 2008-02-08 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 3.11.9
 
