--- a/collab/webmin/HISTORY
+++ b/collab/webmin/HISTORY
@@ -1,3 +1,6 @@
+2008-03-11  Ismael Luceno <ismael@sourcemage.org>
+	* INSTALL: use persistent_add instead of export
+
 2008-02-10 George Sherwood <george@beernabeer.com>
 	* DETAILS: Updated to version 1.400
 
