--- a/chat-irc/bitlbee/HISTORY
+++ b/chat-irc/bitlbee/HISTORY
@@ -1,3 +1,6 @@
+2008-03-11  Ismael Luceno <ismael@sourcemage.org>
+	* BUILD: use persistent_add instead of export
+
 2008-02-07 Ethan Grammatikidis <eekee57@fastmail.fm>
 	* CONFIGURE, BUILD, INSTALL: added option to compile bitlbeed
 
