--- a/chat-im/pidgin/HISTORY
+++ b/chat-im/pidgin/HISTORY
@@ -1,3 +1,6 @@
+2008-03-11  Ismael Luceno <ismael@sourcemage.org>
+	* BUILD: use persistent_add instead of export
+
 2007-12-07 George Sherwood <george@beernabeer.com>
 	* DETAILS: Updated to version 2.3.1
 
