--- a/chat-im/gaim1.5/HISTORY
+++ b/chat-im/gaim1.5/HISTORY
@@ -1,3 +1,6 @@
+2008-03-11  Ismael Luceno <ismael@sourcemage.org>
+	* BUILD: use persistent_add instead of export
+
 2007-05-20 Arwed v. Merkatz <v.merkatz@gmx.net>
 	* DEPENDS: renamed evolution2 to evolution
 
