--- a/archive/rpm/HISTORY
+++ b/archive/rpm/HISTORY
@@ -1,3 +1,6 @@
+2008-03-11  Ismael Luceno <ismael@sourcemage.org>
+	* BUILD: use persistent_add instead of export
+
 2007-06-15 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 4.4.9
 	  new url and website
