--- a/libs/stlport/HISTORY
+++ b/libs/stlport/HISTORY
@@ -1,3 +1,6 @@
+2008-03-11  Ismael Luceno <ismael@sourcemage.org>
+	* INSTALL, BUILD: use persistent_add instead of export
+
 2008-01-20 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 5.1.5
 
