--- a/gnome2-libs/glibmm/HISTORY
+++ b/gnome2-libs/glibmm/HISTORY
@@ -1,3 +1,6 @@
+2008-03-11 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 2.16.0 [Bug 14360]
+
 2007-10-24 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated VERSION to 2.14.2
 
