--- a/gnome2-libs/libsoup/HISTORY
+++ b/gnome2-libs/libsoup/HISTORY
@@ -1,3 +1,6 @@
+2008-03-11 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 2.4.0
+
 2008-02-26 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated VERSION to 2.3.4
 
