--- a/gnome2-libs/gtksourceview/HISTORY
+++ b/gnome2-libs/gtksourceview/HISTORY
@@ -1,3 +1,6 @@
+2008-03-11 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 2.2.0
+
 2008-02-27 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated VERSION to 2.1.3
 
