--- a/x11-toolkits/gtkmm2/HISTORY
+++ b/x11-toolkits/gtkmm2/HISTORY
@@ -1,3 +1,6 @@
+2008-03-11 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 2.12.5
+
 2008-01-25 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 2.12.4, cleaned up,
 	  fixed WEB_SITE
