--- a/http/lighttpd/HISTORY
+++ b/http/lighttpd/HISTORY
@@ -1,3 +1,6 @@
+2008-03-11 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.4.19, cleaned up
+
 2007-12-15 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* DEPENDS: added libmemcache, changed the look
 
