--- a/libs/libsigc++3/HISTORY
+++ b/libs/libsigc++3/HISTORY
@@ -1,3 +1,6 @@
+2008-03-11 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 2.2.2
+
 2008-02-24 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 2.2.0
 	* BUILD: useless, multimake is ok now
