--- a/kernels/linux/HISTORY
+++ b/kernels/linux/HISTORY
@@ -1,3 +1,7 @@
+2008-03-11 Eric Sandall <sandalle@sourcemage.org>
+	* latest.defaults: Latest mm_patch is 2.6.25-rc5-mm1
+	* info/patches/mm_patches/2.6.25-rc5-mm1: Added
+
 2008-03-11  Ismael Luceno <ismael@sourcemage.org>
 	* UPDATE_BOOTLOADER, FINAL: use persistent_add instead of export
 
