--- a/http/firefox/HISTORY
+++ b/http/firefox/HISTORY
@@ -1,3 +1,6 @@
+2008-03-11 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: Updated devel to version 3.0 beta 4
+
 2008-03-11  Ismael Luceno <ismael@sourcemage.org>
 	* BUILD: use persistent_add instead of export
 
