--- a/python-pypi/sqlobject/HISTORY
+++ b/python-pypi/sqlobject/HISTORY
@@ -1,3 +1,6 @@
+2008-03-11 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.10.0
+
 2008-03-10 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.9.5
 
