--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2008-03-11 Eric Sandall <sandalle@sourcemage.org>
+	* audio-creation/jokosher: Added a simple and powerful multi-track studio
+
 2008-03-11 Ladislav Hagara <hgr@vabo.cz>
 	* gurus.gpg: added my signing key
 
