--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 2008-03-12 Vlad Glagolev <stealth@sourcemage.org>
 	* lua-forge/lgui: new spell, GTK+2 binding for Lua
+	* lua-forge/ldraw: new spell, cairo binding for Lua
 
 2008-03-11 Eric Sandall <sandalle@sourcemage.org>
 	* audio-creation/jokosher: Added a simple and powerful multi-track studio
