--- a/x11-toolkits/fltk/HISTORY
+++ b/x11-toolkits/fltk/HISTORY
@@ -1,3 +1,6 @@
+2008-03-12 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.1.8rc2
+
 2008-02-28 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.1.8rc1
 
