--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2008-03-12 Eric Sandall <sandalle@sourcemage.org>
+	* net/shorewall.gpg.key: Move from spell-level to section level
+
 2008-03-12 Vlad Glagolev <stealth@sourcemage.org>
 	* lua-forge/lgui: new spell, GTK+2 binding for Lua
 	* lua-forge/ldraw: new spell, cairo binding for Lua
