--- a/net/shorewall-common/HISTORY
+++ b/net/shorewall-common/HISTORY
@@ -1,3 +1,9 @@
+2008-03-12 Eric Sandall <sandalle@sourcemage.org>
+	* DETAILS: Updated to 4.0.9
+	  Use FTP instead of HTTP (except Germany)
+	  Remove viisage URL
+	  Fix Slovakia URL
+
 2008-01-28 Elisamuel Resto <ryuji@sourcemage.org>
 	* DETAILS: VERSION updated to 4.0.8
 
@@ -8,3 +14,4 @@
 	* DETAILS, BUILD, PRE_BUILD, INSTALL, DEPENDS: created this spell
 	  to replace existing shorewall spell
 	* CONFLICTS: conflicts with shorewall-lite
+
