--- a/net/shorewall-perl/HISTORY
+++ b/net/shorewall-perl/HISTORY
@@ -1,3 +1,9 @@
+2008-03-12 Eric Sandall <sandalle@sourcemage.org>
+	* DETAILS: Updated to 4.0.9.1
+	  RELEASE should use ${VERSION:0:5}
+	  Use FTP instead of HTTP (except Germany)
+	  Remove viisage URL
+
 2008-01-28 Elisamuel Resto <ryuji@sourcemage.org>
 	* DETAILS: VERSION updated to 4.0.8
 
@@ -7,3 +13,4 @@
 2007-09-02 David Kowis <dkowis@shlrm.org>
 	* DETAILS, BUILD, INSTALL, DEPENDS: created this spell
 	  to replace existing shorewall spell
+
