--- a/e-17/evas/HISTORY
+++ b/e-17/evas/HISTORY
@@ -1,3 +1,6 @@
+2008-03-04 Eric Sandall <sandalle@sourcemage.org>
+	* CONFIGURE: Ask if user wants Portable Pixmap support
+
 2008-01-28 Dale E. Edmons <linuxfan@sourcemage.org>
 	* DETAILS: Modified KEYWORDS.
 
