--- a/kde-core/kdegraphics/HISTORY
+++ b/kde-core/kdegraphics/HISTORY
@@ -1,3 +1,6 @@
+2008-03-12 Eric Sandall <sandalle@sourcemage.org>
+	* DEPENDS: Disable new LDFLAGS if using openexr (Bug #14363)
+
 2008-02-27 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
 	* CONFIGURE, DEPENDS: added missing dependencies for ksvg #14060
 
@@ -107,7 +110,7 @@
 	* DETAILS: version 3.4.0
 
 2005-03-08 Gareth Clay <gareth@caffeinefuelled.co.uk>
-	* DEPENDS: added optional dependencies on libgphoto2, 
+	* DEPENDS: added optional dependencies on libgphoto2,
 	  sane-backends and openexr
 
 2005-02-28 Gareth Clay <gareth@caffeinefuelled.co.uk>
@@ -231,7 +234,7 @@
 2002-03-14 Eric Womack <eric@lasvegasdata.com>
 	* HISTORY: Added
 	* BUILD: objprelink option added
-	* DEPENDS: depends qt-x11 removed (dependacy tree built) 
+	* DEPENDS: depends qt-x11 removed (dependacy tree built)
 	  depends kdebase added
 
 2002-04-03 George Mochrie <geo@drasil.uklinux.net>
