--- a/audio-creation/snd/HISTORY
+++ b/audio-creation/snd/HISTORY
@@ -1,3 +1,7 @@
+2008-03-12 Eric Sandall <sandalle@sourcemage.org>
+	* DETAILS: Updated to 9.8
+	  SOURCE_DIRECTORY now uses -$VERSION
+
 2007-10-26 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* DEPENDS: openmotif now in z-rejected
 
@@ -110,7 +114,7 @@
 	* DEPENDS: Added OpenGL option
 
 2002-05-16 Unet <unet@sourcemage.org>
-	* DETAILS: Upgraded to 5.10 
+	* DETAILS: Upgraded to 5.10
 	* DEPENDS: Added LADSPA support =)
 
 2002-05-10 Unet <unet@sourcemage.org>
