--- a/gnome2-libs/at-spi/HISTORY
+++ b/gnome2-libs/at-spi/HISTORY
@@ -1,3 +1,6 @@
+2008-03-12 Robin Cook <rcook@wyrms.net>
+	* DETAILS: updated VERSION to 1.22.0
+
 2008-02-26 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated VERSION to 1.21.92
 
