--- a/gnome2-libs/libgnomemm/HISTORY
+++ b/gnome2-libs/libgnomemm/HISTORY
@@ -1,3 +1,6 @@
+2008-03-12 Robin Cook <rcook@wyrms.net>
+	* DETAILS: updated VERSION to 2.22.0
+
 2008-01-20 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated VERSION to 2.20.1
 
