--- a/gnome2-libs/libxklavier/HISTORY
+++ b/gnome2-libs/libxklavier/HISTORY
@@ -1,3 +1,6 @@
+2008-03-12 Robin Cook <rcook@wyrms.net>
+	* DETAILS: updated VERSION to 3.5
+
 2008-02-04 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated VERSION to 3.4
 
