--- a/libs/libical/HISTORY
+++ b/libs/libical/HISTORY
@@ -1,3 +1,7 @@
+2008-03-12 Eric Sandall <sandalle@sourcemage.org>
+	* DETAILS: Updated to 0.31
+	* DEPENDS: Optionally depends on g++, JDK, and python
+
 2008-02-10 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 0.30
 
