--- a/gnome2-libs/evolution-data-server/HISTORY
+++ b/gnome2-libs/evolution-data-server/HISTORY
@@ -1,3 +1,6 @@
+2008-03-12 Robin Cook <rcook@wyrms.net>
+	* DETAILS: updated VERSION to 2.22.0
+
 2008-02-26 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated VERSION to 2.21.92
 
