--- a/gnome2-libs/gnome-keyring/HISTORY
+++ b/gnome2-libs/gnome-keyring/HISTORY
@@ -1,3 +1,6 @@
+2008-03-12 Robin Cook <rcook@wyrms.net>
+	* DETAILS: updated VERSION to 2.22.0
+
 2008-03-01 Elisamuel Resto <ryuji@sourcemage.org>
 	* DEPENDS: added required dependency on libtasn1
 
