--- a/gnome2-libs/gnome-panel/HISTORY
+++ b/gnome2-libs/gnome-panel/HISTORY
@@ -1,3 +1,6 @@
+2008-03-12 Robin Cook <rcook@wyrms.net>
+	* DETAILS: updated VERSION to 2.22.0
+
 2008-03-02 Ladislav Hagara <hgr@vabo.cz>
 	* DEPENDS: fixed typo
 
