--- a/gnome2-libs/gtk-engines2/HISTORY
+++ b/gnome2-libs/gtk-engines2/HISTORY
@@ -1,3 +1,6 @@
+2008-03-13 Robin Cook <rcook@wyrms.net>
+	* DETAILS: updated VERSION to 2.14.0
+
 2008-02-26 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated VERSION to 2.13.6
 
