--- a/graphics/inkscape/HISTORY
+++ b/graphics/inkscape/HISTORY
@@ -1,3 +1,6 @@
+2008-03-13 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: upstream key added, gz => bz2 to reduce DLable size
+
 2008-03-11 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 0.46
 
