--- a/latex/pgf/HISTORY
+++ b/latex/pgf/HISTORY
@@ -1,5 +1,5 @@
 2008-03-13 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
-	* DETAILS, INSTALL: updated to 2.00
+	* DETAILS, INSTALL, DEPENDS: updated to 2.00
 
 2007-08-22 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: updated to 1.18
