--- a/lua-forge/lua-imlib2/INSTALL
+++ b/lua-forge/lua-imlib2/INSTALL
@@ -1,1 +1,3 @@
-install -m 755 limlib2.so $INSTALL_ROOT/usr/lib/lua/5.1
+local LUA=$(installed_version lua)
+
+install -m 755 limlib2.so $INSTALL_ROOT/usr/lib/lua/${LUA%.?}
