--- a/graphics-libs/poppler/HISTORY
+++ b/graphics-libs/poppler/HISTORY
@@ -1,3 +1,6 @@
+2008-03-13 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 0.7.2
+
 2008-03-03 Ladislav Hagara <hgr@vabo.cz>
 	* DEPENDS: added -sub TOOLS for qt4 [Bug 14350]
 
