--- a/e-17/e_dbus/HISTORY
+++ b/e-17/e_dbus/HISTORY
@@ -1,3 +1,7 @@
+2008-03-12 Eric Sandall <sandalle@sourcemage.org>
+	* CONFIGURE: Query for eHal, eNM, and eNotify support
+	* BUILD: Pass configure parameters to OPTS
+
 2008-01-17 Eric Sandall <sandalle@sourcemage.org>
 	* DEPENDS: Depends one vas
 
