--- a/news/liferea/HISTORY
+++ b/news/liferea/HISTORY
@@ -1,3 +1,6 @@
+2008-03-13 George Sherwood <george@beernabeer.com>
+	* DETAILS: Updated stable to version 1.4.14
+
 2008-03-05 George Sherwood <george@beernabeer.com>
 	* DETAILS: Updated devel to version 1.5.0
 	* PRE_BUILD: Only copy webkit.c for stable
