--- a/gnome2-libs/gdm2/HISTORY
+++ b/gnome2-libs/gdm2/HISTORY
@@ -1,3 +1,6 @@
+2008-03-13 Robin Cook <rcook@wyrms.net>
+	* DETAILS: updated VERSION to 2.20.4
+
 2008-01-17 Arwed v. Merkatz <v.merkatz@gmx.net>
 	* PRE_BUILD, verify-shadow.patch: patch to fix bug #14222
 
