--- a/graphics/imagemagick/HISTORY
+++ b/graphics/imagemagick/HISTORY
@@ -1,3 +1,6 @@
+2008-03-14 George Sherwood <george@beernabeer.com>
+	* DETAILS: Updated to version 6.3.9-7
+
 2008-03-09 George Sherwood <george@beernabeer.com>
 	* DETAILS: Updated to version 6.3.9-3
 
