--- a/gnome2-libs/pygtksourceview/HISTORY
+++ b/gnome2-libs/pygtksourceview/HISTORY
@@ -1,3 +1,6 @@
+2008-03-13 Robin Cook <rcook@wyrms.net>
+	* DETAILS: updated VERSION to 2.2.0
+
 2008-02-27 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated VERSION to 2.1.1
 
