--- a/gnome2-libs/gnome-sharp/HISTORY
+++ b/gnome2-libs/gnome-sharp/HISTORY
@@ -1,3 +1,6 @@
+2008-03-14 Robin Cook <rcook@wyrms.net>
+	* DETAILS: updated VERSION to 2.20.0
+
 2008-02-28 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated VERSION to 2.19.91
 	* DEPENDS: removed depends that are now in gnome-desktop-sharp
