--- a/kde4/kde4-profile/HISTORY
+++ b/kde4/kde4-profile/HISTORY
@@ -1,3 +1,6 @@
+2008-03-14  Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 4.0.66
+
 2008-03-07  Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 4.0.2
 
