--- a/utils/hal/HISTORY
+++ b/utils/hal/HISTORY
@@ -1,3 +1,7 @@
+2007-03-13 Treeve Jelbert <treeve@sourcemage.org>
+        * DETAILS: version 0.5.11rc1
+	* PRE_BUILD, libparted_check.patch: deleted
+
 2007-11-14 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
 	* DEPENDS: removed hal-info #14079 (circular dependency and wrong)
 	  added a force_depends on glibc, needs newer kernel headers than those
