--- a/devel/re2c/HISTORY
+++ b/devel/re2c/HISTORY
@@ -1,3 +1,6 @@
+2008-03-13 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.13.3
+
 2008-02-15 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.13.2
 
