--- a/kde4/kdewebdev4/HISTORY
+++ b/kde4/kdewebdev4/HISTORY
@@ -1,3 +1,6 @@
+2008-03-14  Bearcat M. Sandor <sourcemage@feline-soul.com>
+	* DEPENDS: changed dependency of kdesdk to kdesdk4
+	 
 2008-03-14  Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 4.0.66
 
