--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-03-14 Martin Spitzbarth <m.spitzbarth@gmx.de>
+	* net/aiccu: new spell, a utility to automatically setup an
+	  IPv6 over IPv4 tunnel to a tunnel broker
+
 2008-03-14 Justin Boffemmyer <flux@sourcemage.org>
 	* gnome2-apps/gtkdialog: new spell, gtk GUI creation util
 	* devel/radare: new spell, powerful hex editor/debugger/etc.
