--- a/gnome2-apps/alacarte/HISTORY
+++ b/gnome2-apps/alacarte/HISTORY
@@ -1,3 +1,6 @@
+2008-03-14 Robin Cook <rcook@wyrms.net>
+	* DETAILS: updated VERSION to 0.11.5
+
 2008-02-28 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated VERSION to 0.11.4
 
