--- a/gnome2-apps/system-tools-backends/HISTORY
+++ b/gnome2-apps/system-tools-backends/HISTORY
@@ -1,3 +1,6 @@
+2008-03-14 Robin Cook <rcook@wyrms.net>
+	* DETAILS: updated VERSION to 2.6.0
+
 2008-02-28 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated VERSION to 2.5.8
 
