--- a/gnome2-apps/gucharmap/HISTORY
+++ b/gnome2-apps/gucharmap/HISTORY
@@ -1,3 +1,6 @@
+2008-03-14 Robin Cook <rcook@wyrms.net>
+	* DETAILS: updated VERSION to 2.22.0
+
 2008-02-28 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated VERSION to 2.21.90
 
