--- a/gnome2-apps/tomboy/HISTORY
+++ b/gnome2-apps/tomboy/HISTORY
@@ -1,3 +1,6 @@
+2008-03-14 Robin Cook <rcook@wyrms.net>
+	* DETAILS: updated VERSION to 0.10.0
+
 2008-03-06 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated VERSION to 0.9.8
 
