--- a/gnome2-apps/glade3/HISTORY
+++ b/gnome2-apps/glade3/HISTORY
@@ -1,3 +1,6 @@
+2008-03-14 Robin Cook <rcook@wyrms.net>
+	* DETAILS: updated VERSION to 3.4.3
+
 2007-12-29 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated VERSION to 3.4.1
 
