--- a/devel/anjuta/HISTORY
+++ b/devel/anjuta/HISTORY
@@ -1,3 +1,6 @@
+2008-03-14 Robin Cook <rcook@wyrms.net>
+	* DETAILS: updated VERSION to 2.4.0
+
 2007-12-29 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated VERSION to 2.2.3
 
