--- a/database/tokyocabinet/HISTORY
+++ b/database/tokyocabinet/HISTORY
@@ -1,3 +1,6 @@
+2008-03-15 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.2.1
+
 2008-02-27 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.2.0
 
