--- a/ftp/aria2/HISTORY
+++ b/ftp/aria2/HISTORY
@@ -1,3 +1,6 @@
+2008-03-15 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.13.1
+
 2007-10-28 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* DETAILS: updated spell to 0.11.4
 
