--- a/utils/findutils/HISTORY
+++ b/utils/findutils/HISTORY
@@ -1,3 +1,6 @@
+2008-03-15 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 4.4.0
+
 2008-02-14 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 4.2.33
 
