--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-03-15 Ladislav Hagara <hgr@vabo.cz>
+	* crypto/ophcrack: new spell
+	  a Windows password cracker based on rainbow tables
+
 2008-03-14 Martin Spitzbarth <m.spitzbarth@gmx.de>
 	* net/aiccu: new spell, a utility to automatically setup an
 	  IPv6 over IPv4 tunnel to a tunnel broker
