--- a/science-libs/octaviz/HISTORY
+++ b/science-libs/octaviz/HISTORY
@@ -1,3 +1,6 @@
+2008-03-15 Eric Sandall <sandalle@sourcemage.org>
+	* DETAILS: Updated to 0.4.7
+
 2008-01-30 Mathieu Lonjaret <lejatorn@sourcemage.org>
 	* DETAILS: corrected hashsum
 
