--- a/database/pgadmin3/HISTORY
+++ b/database/pgadmin3/HISTORY
@@ -1,3 +1,6 @@
+2008-03-16 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 1.8.2
+
 2008-01-15 Elisamuel Resto <ryuji@sourcemage.org>
 	* DETAILS: updated to 1.8.1
 
