--- a/audio-creation/linuxsampler/HISTORY
+++ b/audio-creation/linuxsampler/HISTORY
@@ -1,3 +1,11 @@
+2008-03-16 Juuso Alasuutari <iuso@sourcemage.org>
+	* DETAILS: Updated to 0.5.1, added MAKE_NJOBS=1 to fix build.
+	* CONFIGURE: Added, query about assembly optimizations.
+	* DEPENDS: Added optional_depends sqlite, added missing
+	  --enabled flags.
+	* BUILD: Added flags to disable Windows and Mac OS drivers.
+	* INSTALL: Added, install API documentation when depending on doxygen.
+
 2008-01-28 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
 	* BUILD: removed is_depends_enabled.function reference
 
