--- a/audio-creation/gigedit/HISTORY
+++ b/audio-creation/gigedit/HISTORY
@@ -1,2 +1,6 @@
+2008-03-16 Juuso Alasuutari <iuso@sourcemage.org>
+	* DETAILS: Updated to 0.1.1, added MAKE_NJOBS=1 to fix build.
+	* DEPENDS: Added optional_depends linuxsampler and gettext.
+
 2007-04-04 Juuso Alasuutari <iuso@sourcemage.org>
 	* DETAILS, DEPENDS, BUILD: Created spell.
