--- a/utils/pciutils/HISTORY
+++ b/utils/pciutils/HISTORY
@@ -1,3 +1,6 @@
+2008-03-16 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 2.2.10
+
 2007-11-07 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 2.2.9
 
